--- a/public/index.html
+++ b/public/index.html
@@ -49,12 +49,12 @@
             background-color: rgba(0,0,0,0.33);
             color: #eff0f1;
             top: 0;
-            right: 0;
-            height: 54px;
-            width: 54px;
+            left: 0;
+            height: 74px;
+            width: 74px;
             z-index:100;
             border: none;
-            border-radius: 0 0 0 10px;
+            border-radius: 0 0 10px 0;
         }
         #swipeArea {
             z-index: 1001;
