--- a/public/fullscreen.html
+++ b/public/fullscreen.html
@@ -49,12 +49,16 @@
             background-color: rgba(0,0,0,0.33);
             color: #eff0f1;
             top: 0;
-            right: 0;
-            height: 54px;
-            width: auto;
+            left: 0;
+            height: 74px;
+            width: 74px;
             z-index:100;
             border: none;
-            border-radius: 0 0 0 10px;
+            border-radius: 0 0 10px 0;
+        }
+        #swipeArea {
+            z-index: -1;
+            top: 54px;
         }
     </style>
 </head>
