--- a/public/library.html
+++ b/public/library.html
@@ -31,14 +31,14 @@
 </head>
 <body>
     <div id="header">
+        <div class="headerGroup headerLeft">
+        </div>
+        <div class="headerGroup headerCenter">
+            <!--<button type="button" id="buttonZoneName" class="headerButton textBold" onclick="$('#overlayZoneList').show()">zoneList</button>-->
+        </div>
         <div class="headerGroup headerRight">
             <button type="button" id="buttonBack" class="headerButton"></button>
             <button type="button" id="buttonHome" class="headerButton"></button>
-        </div>
-        <div class="headerGroup headerCenter">
-            <button type="button" id="buttonZoneName" class="headerButton textBold" onclick="$('#overlayZoneList').show()">zoneList</button>
-        </div>
-        <div class="headerGroup headerRight">
             <!-- <button type="button" id="buttonSearch" class="headerButton"></button> -->
         </div>
     </div>
