--- a/public/nowplaying.html
+++ b/public/nowplaying.html
@@ -57,6 +57,7 @@
         <div id="line1" class="colorChange textBold lineMusicInfo">&nbsp;</div>
         <div id="line2" class="colorChange lineMusicInfo">&nbsp;</div>
         <div id="line3" class="colorChange lineMusicInfo">&nbsp;</div>
+        <div id="line4" class="colorChange lineMusicInfo">&nbsp;</div>
         <div id="controlsPlayer">
             <button type="button" id="controlPrev" class="buttonFillHeight"></button>
             <button type="button" id="controlPlayPauseStop" class="buttonFillHeight"></button>
