--- a/public/library.html
+++ b/public/library.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" type="text/css" href="/css/site.css">
     <link rel="stylesheet" type="text/css" href="/css/library.css">
     <script src="/jquery/jquery.min.js"></script>
+    <script src="/js/jquery.simplemarquee.js"></script>
     <script src="/js-cookie/js.cookie.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/library.js"></script>
