--- a/public/fullscreen.html
+++ b/public/fullscreen.html
@@ -74,7 +74,7 @@
 
     <div id="overlayMainMenu" class="overlay">
         <div class="overlayBackground" onclick="$('#overlayMainMenu').hide()">
-            <img src="img/cube.svg" class="spinner"
+            <img src="img/cube.svg" class="spinner">
         </div>
         <div class="overlayContent">
             <div class="overlayList">
