--- a/public/library.html
+++ b/public/library.html
@@ -24,7 +24,7 @@
     <link rel="icon" href="/favicons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="/css/site.css">
     <link rel="stylesheet" type="text/css" href="/css/library.css">
-    <script src="/jquery/jquery.min.js"></script>
+    <script src="/jquery/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
     <script src="/js/jquery.simplemarquee.js"></script>
     <script src="/js-cookie/js.cookie.js"></script>
     <script src="/socket.io/socket.io.js"></script>
