--- a/public/nowplaying.html
+++ b/public/nowplaying.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" type="text/css" href="/css/site.css">
     <link rel="stylesheet" type="text/css" href="/css/nowplaying.css">
     <link rel="stylesheet" type="text/css" href="/css/equalizer.css">
-    <script src="/jquery/jquery.min.js"></script>
+    <script src="/jquery/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
     <script src="/js/jquery.simplemarquee.js"></script>
     <script src="/js/color-thief.js"></script>
     <script src="/js-cookie/js.cookie.js"></script>
