add virtual keyboard

--- a/public/library.html
+++ b/public/library.html
@@ -24,8 +24,13 @@
     <link rel="icon" href="/favicons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="/css/site.css">
     <link rel="stylesheet" type="text/css" href="/css/library.css">
+    <link rel="stylesheet" type="text/css" href="/css/keyboard.min.css">
     <script src="/jquery/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
     <script src="/js/jquery.simplemarquee.js"></script>
+    <script src="/js/jquery.keyboard.min.js"></script>
+    <script src="/js/jquery.keyboard.extension-autocomplete.min.js"></script>
+    <script src="/js/jquery.keyboard.extension-caret.min.js"></script>
+    <script src="/js/jquery.keyboard.extension-typing.min.js"></script>
     <script src="/js-cookie/js.cookie.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/library.js"></script>
