--- a/public/library.html
+++ b/public/library.html
@@ -24,6 +24,7 @@
     <link rel="icon" href="/favicons/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="/css/site.css">
     <link rel="stylesheet" type="text/css" href="/css/library.css">
+    <link rel="stylesheet" type="text/css" href="/css/jquery-ui.css">
     <link rel="stylesheet" type="text/css" href="/css/keyboard.css">
     <script src="/jquery/jquery.min.js" onload="window.$ = window.jQuery = module.exports;"></script>
     <script src="/js/jquery.simplemarquee.js"></script>
