remove library/nowplaying button

--- a/public/fullscreen.html
+++ b/public/fullscreen.html
@@ -90,8 +90,8 @@
         </div>
         <div class="overlayContent">
             <div class="overlayList">
-                <button type="button" class="buttonOverlay" onclick="showSection('nowPlaying')">Now Playing</button>
-                <button type="button" class="buttonOverlay" onclick="showSection('libraryBrowser')">Library</button>
+                <!-- <button type="button" class="buttonOverlay" onclick="showSection('nowPlaying')">Now Playing</button>
+                <button type="button" class="buttonOverlay" onclick="showSection('libraryBrowser')">Library</button> -->
                 <button type="button" class="buttonOverlay" onclick="$('#overlayTheme').show()">Theme</button>
                 <button type="button" class="buttonOverlay" onclick="goPage('eunhasu')">Eunhasu</button>
             </div>
